--- a/fire_app/pubspec.yaml
+++ b/fire_app/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   http: ^1.3.0
   flutter_polyline_points: ^2.1.0
   permission_handler: ^12.0.1
+  image_picker: ^1.2.0
+  intl: ^0.20.2
+  image: ^4.5.4
+
   
 dev_dependencies:
   flutter_test:
