--- a/fire_app/pubspec.yaml
+++ b/fire_app/pubspec.yaml
@@ -27,6 +27,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.13.1
+  google_maps_flutter: ^2.5.0
 
 flutter:
   uses-material-design: true
