--- a/fire_app/pubspec.yaml
+++ b/fire_app/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.1
   firebase_database: ^12.0.1
+  cloud_firestore: ^6.1.0
   geolocator: ^13.0.2
   latlong2: ^0.9.1
   flutter_map: ^7.0.2
