--- a/fire_app/pubspec.yaml
+++ b/fire_app/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   http: ^1.3.0
   flutter_polyline_points: ^2.1.0
   permission_handler: ^12.0.1
+  flutter_compass: ^0.8.0
+  image_picker: ^1.1.2
+  firebase_storage: ^13.0.4
   
 
 dev_dependencies:
