🔔 Sistema de Notificações Push para Incêndios Próximos
- ✅ Implementado NotificationService com flutter_local_notifications
- ✅ Cálculo de distância com latlong2 para detectar incêndios a 5km
- ✅ Android notification channel 'nearby_incendio_channel' com prioridade alta
- ✅ Integração em home_page_screen com rastreamento de notificações duplicadas
- ✅ Localização em pt-BR e en-US adicionada
- ✅ Corrigido erro de desugaring Java 8 no build.gradle.kts
- ✅ Permissão POST_NOTIFICATIONS adicionada ao AndroidManifest.xml

Build: OK | Runtime: OK | Teste com emulador: Sucesso

--- a/fire_app/android/app/src/main/AndroidManifest.xml
+++ b/fire_app/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <!-- 📍 LOCALIZAÇÃO PARA MAPA E GEOLOCATOR -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <!-- ⏳ OPCIONAL: localização em segundo plano (se ativar perigo/incêndio contínuo) -->
     <!-- <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/> -->
