--- a/fire_app/pubspec.yaml
+++ b/fire_app/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_local_notifications: ^17.1.2
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.1
   firebase_database: ^12.0.1
